fix closing-item overflow on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,7 @@ main {
   background-color: gray;
   min-width: 25%;
   flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 400px;
+  flex-basis: 150px;
 }
 
 /* smaller than 1024 pixels */
